Fix text & input fields align

--- a/css/styles.css
+++ b/css/styles.css
@@ -357,7 +357,13 @@ form {
 }
 
 .column-container {
-  width: 90%;
+  width: 80%;
+}
+
+.input-fields {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #sendButton {
